[package]
name = "cardano-mcp-server"
version = "0.1.0"
edition = "2021"
description = "A Cardano MCP server for interacting with cardano-node and DB-Sync"
license = "Apache-2.0"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pallas-network = "0.34"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
thiserror = "2.0"
anyhow = "1.0"
hex = "0.4"
